# Hitbox-editor

./: .gitignore  .gitmodules  Cargo.toml  IMPLEMENTATION_SUMMARY.md  airf_acmd_out.txt  airf_effect_out.txt  all_test_out.txt  bgra_test_out.txt  bomb_cadp.txt  build.rs  build.sh  build_check.sh  build_check.txt  cadp2.txt  cadp_out.txt  cargo_build_fix48.txt  cargo_build_task47.txt  cargo_build_tasks_out.txt  cargo_build_test_out.txt  cargo_test_bug_condition.txt  cargo_test_bug_out.txt  cargo_test_color_key.txt  cargo_test_deswizzle_fix.txt  cargo_test_deswizzle_fix2.txt  cargo_test_diag.txt  cargo_test_fidelity_out.txt  cargo_test_final.txt  cargo_test_fix48.txt  cargo_test_mario_eff.txt  cargo_test_out.txt  cargo_test_preservation_3_7.txt  cargo_test_preservation_3_7b.txt  cargo_test_preservation_out.txt  cargo_test_preservation_task2.txt  cargo_test_preservation_tbs.txt  cargo_test_real_eff.txt  cargo_test_swizzle_bug.txt  cargo_test_swizzle_fix.txt  cargo_test_swizzle_out.txt  cargo_test_swizzle_tests.txt  (+200 more)
proptest-regressions/: effects.txt
src/: acmd.rs  app.rs  batch_loader.rs  bnsh_reflection.rs  bnsh_shader_integration.rs  data.rs  effect_browser.rs  effects.rs  end_to_end_integration_test.rs  integration_tests.rs  lib.rs  main.rs  mesh.wgsl  mesh_shader.rs  particle.wgsl  particle_renderer.rs  particle_renderer_bnsh.rs  particle_shader.rs  renderer.rs  shader_cache.rs  shader_integration.rs  spirv_to_wgsl.rs  trail.wgsl  trail_shader.rs
src/bnsh_ffi/: bnsh_wrapper.cpp  bnsh_wrapper.h  lib.rs  mod.rs
tests/: test_particle_renderer_integration.rs  test_real_effects.rs
